# data-manager

./: .gitignore  API_CONTRACT.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  pyproject.toml  qa_diskspeed_test.py  qa_pipeline_test.py  qa_remote_http_test.py  qa_sftp_channel_test.py  qa_sftp_test.py  qa_transfer_test.py
assets/: app_icon.icns  generate_icons.py
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ConnectBar.tsx  ConnectPanel.tsx  ContextMenu.tsx  DownloadPanel.tsx  ImagePreview.tsx  JobDetail.tsx  JobProgress.tsx  JobsPanel.tsx  MainPanel.tsx  ProgressBar.tsx  RemoteConnectPanel.tsx  RemoteDownloadPanel.tsx  RemoteFolderBrowser.tsx  RemoteMainPanel.tsx  RemoteTreeSidebar.tsx  RemoteUploadPanel.tsx  SettingsPanel.tsx  SyncPanel.tsx  Toast.tsx  TransferView.tsx  TreeSidebar.tsx  UploadPanel.tsx
frontend/src/hooks/: useJob.ts  useSubmitGuard.ts
frontend/src/lib/: api.ts  clipboard.ts  themes.ts
frontend/src/store/: appStore.ts
packaging/: build.sh  install_autostart.sh  s3manager.spec  uninstall_autostart.sh
qa/: README.md  qa_cancel_test.py  qa_direct_cancel_test.py  qa_jobs_persist_test.py  qa_r2r_test.py  qa_remote_http_test.py  qa_transfer_test.py
src/s3manager/: __init__.py  settings.py
src/s3manager/core/: credentials.py  jobs.py  notify.py  preferences.py  remote_profiles.py  s3_engine.py  sftp_engine.py  transfer_engine.py
src/s3manager/server/: app.py  models.py
src/s3manager/shell/: bridge.py  main.py  tray.py
