[project]
name = "s3-manager"
version = "2.0.0"
description = "메뉴바 기반 데이터 전송 데스크톱 앱 — S3·원격 SFTP (FastAPI + React + pywebview)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "paramiko>=3.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "keyring>=25.0.0",
    "pywebview>=5.1",
    "pyobjc-core>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=10.3; sys_platform == 'darwin'",
    "pystray>=0.19.5",
    "pillow>=10.4.0",
]

[project.scripts]
s3-manager = "s3manager.shell.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3manager"]

[tool.uv]
# pyobjc/pywebview 호환성을 위해 3.12 사용 권장
